syntax = "proto3";

package bridge.bridge;

import "gogoproto/gogo.proto";
import "bridge/bridge/params.proto";
import "bridge/bridge/keygen_block.proto";
import "bridge/bridge/node_account.proto";

option go_package = "bridge/x/bridge/types";

// GenesisState defines the bridge module's genesis state.
message GenesisState {
           Params      params           = 1 [(gogoproto.nullable) = false];
  repeated KeygenBlock keygenBlockList  = 2 [(gogoproto.nullable) = false];
  repeated NodeAccount nodeAccountList  = 3 [(gogoproto.nullable) = false];
           uint64      nodeAccountCount = 4;
}

